packages/build/tests/error/fixtures/exception_string/plugin.js
export const onPreBuild = function () {
  // eslint-disable-next-line no-throw-literal
  throw 'test'
}
